# resticmgr

./: .gitignore  Cargo.toml  DOCKERBUILD  Dockerfile  sample_config.json
.github/workflows/: build-and-push-container.yml
src/: config.rs  main.rs
