[package]
authors = ["Tolan Blundell <tolan@patternseek.net>"]
name = "resticmgr"
version = "1.1.2"
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
lettre = { version= "0.11.7", default_features = false,  features = ["file-transport", "smtp-transport", "rustls-tls", "hostname", "sendmail-transport", "builder"] }
#lettre_email = "0.9.4"
scoped_threadpool = "0.1.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
structopt-derive = "0.4"

[dependencies.chrono]
features = [
    "serde",
]
version = "0.4.0"
